--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,20 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es5",
     "module": "es2015",
     "jsx": "react-native",
     "declaration": true,
     "removeComments": false,
     "strict": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
-  }
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./",
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "skipLibCheck": true
+  },
+  "exclude": [
+    "node_modules",
+    "demo"
+  ]
 }
