--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "image",
     "viewer"
   ],
-  "author": "luutruong",
+  "author": "Luu Truong",
   "bugs": {
     "url": "https://github.com/luutruong/react-native-image-viewer/issues"
   },
