--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,16 +18,15 @@ jobs:
         node-version: '14'
     - run: yarn install --frozen-lockfile
     - run: yarn build
-    - run: ls -la .
-    # - name: Publish if version has been updated
-    #   uses: pascalgn/npm-publish-action@1.3.8
-    #   with:
-    #     tag_name: "v%s"
-    #     tag_message: "v%s"
-    #     create_tag: "true"
-    #     commit_pattern: "^Release (\\S+)"
-    #     workspace: "."
-    #     publish_command: "npm"
-    #     publish_args: "--non-interactive --access=public"
-    #   env:
-    #     NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+    - name: Publish if version has been updated
+      uses: pascalgn/npm-publish-action@1.3.8
+      with:
+        tag_name: "v%s"
+        tag_message: "v%s"
+        create_tag: "true"
+        commit_pattern: "^Release (\\S+)"
+        workspace: "."
+        publish_command: "npm"
+        publish_args: "--non-interactive --access=public"
+      env:
+        NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
