--- a/demo/package.json
+++ b/demo/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "react": "17.0.2",
-    "react-native": "0.65.1",
-    "react-native-gesture-handler": "^2.2.0"
+    "react-native": "0.67.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -26,7 +25,6 @@
     "eslint": "^7.32.0",
     "jest": "^27.1.1",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
