--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "main": "dist/src/index.js",
   "license": "MIT",
   "peerDependencies": {
-    "react-native": ">= 0.64.0"
+    "react-native": ">= 0.66.0"
   },
   "devDependencies": {
     "@types/react-native": "^0.65.0",
     "prettier": "^2.4.1",
-    "react-native": ">= 0.64.0",
+    "react-native": ">= 0.66.0",
     "typescript": "^4.4.3"
   },
-  "dependencies": {
-    "react-native-gesture-handler": "^2.2.0"
-  },
+  "dependencies": {},
   "files": [
     "package.json",
     "yarn.lock",
